--- a/src/index.css
+++ b/src/index.css
@@ -19,7 +19,7 @@
   border: 1px solid #555;
   border-radius: 5px;
   text-align: center;
-  padding: 10px;
+  /* padding: 10px; */
 }
 
 #download-image .react-flow__node-custom .react-flow__handle-right {
@@ -46,4 +46,16 @@
 
 #download-image .download-btn:hover {
   opacity: 0.9;
+}
+
+.image-cont {
+  width: 50px;
+  height: 50px;
+}
+
+img {
+  width: 100%;
+  max-width: 100%;
+  height: 100%;
+  object-fit: cover;
 }
